# NitroGen-Training

./: .gitignore  Dockerfile.inference  README.md  docker-compose.yml  pyproject.toml
nitrogen/: cfg.py  game_env.py  inference_client.py  inference_session.py  inference_viz.py  mm_tokenizers.py  shared.py
nitrogen/flow_matching_transformer/: modules.py  nitrogen.py
scripts/: play.py  serve.py
